# pdrive

server/: .env  .gitignore  Cargo.toml  README.md
server/migrations/: 001_init.sql
server/src/: main.rs  state.rs
server/src/db/: mod.rs
server/src/migrations/: 001_init.sql
server/src/routes/: health.rs  media.rs  mod.rs
server/src/services/: db.rs  mod.rs  storage.rs
