[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.52.3", features = ["fs", "full"] }
uuid = { version = "1.23.3", features = ["v4"] }
